Aether-ueransim Playbook

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,21 +1,11 @@
 [all]
-node1 ansible_host=10.76.28.113 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
-#node2 ansible_host=10.76.28.115 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
-#node3 ansible_host=10.76.28.117 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
-#node4 ansible_host=10.76.28.119 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
+#ueransimNode1 ansible_host=172.16.193.6 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
+#onramp1 ansible_host=172.16.41.103 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 
-[master_nodes]
-node1
-
-[worker_nodes]
-#node2
-#node3
-#node4
-
-[gnbsim_nodes]
-node1
-#node4
-
+ueransimNode1 ansible_host=172.31.43.115 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/aether-qa.pem ansible_sudo_pass=ubuntu
 
 [ueransim_nodes]
-#node1
+ueransimNode1
+
+[master_nodes]
+ueransimNode1
