--- a/roles/router/defaults/main.yml
+++ b/roles/router/defaults/main.yml
@@ -1,8 +1,8 @@
-ueransimsim:
+ueransim:
   router:
     data_iface: data
     macvlan:
-      iface: ueransimaccess
+      iface: gnbaccess
       subnet_prefix: "172.20"
 
 core:
