default config and host.ini changes

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -9,7 +9,7 @@ ueransim:
         name: ueransimnet
 
   router:
-    data_iface: eth0
+    data_iface: ens18
     macvlan:
       iface: ueransimaccess
       subnet_prefix: "172.20"
@@ -17,12 +17,6 @@ ueransim:
   servers:
     0:
       - "config/ueransim_default.yaml"
-        #- "config/gnbsim-s1-p2.yaml"
-    # 1:
-    #   - "config/gnbsim-s2-p1.yaml"
-    #   - "config/gnbsim-s2-p2.yaml"
-
-core:
   upf:
     ip_prefix: "192.168.252.0/24"
     iface: "access"
