--- a/config/custom-gnb.yaml
+++ b/config/custom-gnb.yaml
@@ -7,7 +7,7 @@
 ---
 info:
   version: 1.0.0
-  description: GNBSIM initial local configuration
+  description: UERANSIM initial local configuration
 
 configuration:
         mcc: '286'          # Mobile Country Code value
