--- a/roles/docker/tasks/start.yml
+++ b/roles/docker/tasks/start.yml
@@ -23,12 +23,14 @@
   become: true
 
 - name: create {{ ueransim.docker.container.image }} containers
+  remote_user: root
   community.docker.docker_container:
     name: "{{ ueransim.docker.container.prefix }}-{{ item }}"
     image: "{{ ueransim.docker.container.image }}"
     network_mode: "{{ ueransim.docker.network.macvlan.name }}"
     command: sleep 1d
     state: started
+    privileged: true
   with_sequence: count={{ ueransim.docker.container.count }}
   when: inventory_hostname in groups['ueransim_nodes']
   become: true
