--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 
 - name: install ueransim/docker
-  include: roles/docker/tasks/install.yml
+  import_tasks: roles/docker/tasks/install.yml
   tags: install
 
 - name: uninstall ueransim/docker
-  include: roles/docker/tasks/uninstall.yml
+  import_tasks: roles/docker/tasks/uninstall.yml
   tags: uninstall
 
 - name: start ueransim/dockers
-  include: roles/docker/tasks/start.yml
+  import_tasks: roles/docker/tasks/start.yml
   tags: start
 
 - name: stop ueransim/dockers
-  include: roles/docker/tasks/stop.yml
+  import_tasks: roles/docker/tasks/stop.yml
   tags: stop
