--- a/roles/simulator/tasks/main.yml
+++ b/roles/simulator/tasks/main.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: install ueransim/simulator
+  import_tasks: roles/simulator/tasks/install.yml
+  tags: install
+
 - name: start ueransim/simulator
   import_tasks: roles/simulator/tasks/start.yml
   tags: start
+
+- name: uninstall ueransim/simulator
+  import_tasks: roles/simulator/tasks/uninstall.yml
+  tags: uninstall
