ueransim standalone blueprint parameterised with variables

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,5 +1,5 @@
 [all]
-ueransimNode1 ansible_host=172.16.193.6 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
+ueransimNode1 ansible_host=172.31.3.101 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/aether-qa.pem ansible_sudo_pass=ubuntu
 #onramp1 ansible_host=172.16.41.103 ansible_user=aether ansible_password=aether ansible_sudo_pass=aether
 #ueransimNode1 ansible_host=172.31.43.11 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/aether-qa.pem ansible_sudo_pass=ubuntu
 
