--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,25 +1,11 @@
 ueransim:
-  docker:
-    container:
-      image: kunal14kapoor/ueransim
-      prefix: ueransim
-      count: 1
-    network:
-      macvlan:
-        name: ueransimnet
-
-  router:
-    data_iface: ens18
-    macvlan:
-      iface: ueransimaccess
-      subnet_prefix: "172.20"
-
   servers:
     0:
-      - "config/ueransim_default.yaml"
+      - "custom-gnb.yaml"
+      - "custom-ue.yaml"
   upf:
     ip_prefix: "192.168.252.0/24"
     iface: "access"
   amf:
-    ip: "172.16.248.6"
+    ip: "172.31.3.101"
     
