--- a/vars/main-ueransim.yml
+++ b/vars/main-ueransim.yml
@@ -17,8 +17,9 @@ core:
   values_file: "deps/5gc/roles/core/templates/sdcore-5g-values.yaml"
   ran_subnet: "172.20.0.0/16"
   helm:
+    local_charts: false
     chart_ref: aether/sd-core
-    chart_version: 0.12.6
+    chart_version: 1.0.4
   upf:
     ip_prefix: "192.168.252.0/24"
     iface: "access"
@@ -28,7 +29,7 @@ core:
 ueransim:
   docker:
     container:
-            image: kunal14kapoor/ueransim:latest
+      image: kunal14kapoor/ueransim:latest
       prefix: ueransim
       count: 1
     network:
@@ -55,6 +56,7 @@ amp:
 
   aether_roc:
     helm:
+      local_charts: false
       chart_ref: aether/aether-roc-umbrella
       chart_version: 2.1.36
 
