--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -30,6 +30,7 @@
   tags:
     - install
 
+# TODO: Fix cmake version: CMake 3.17 or higher is required
 - name: Install cmake
   snap:
     name: cmake
@@ -48,3 +49,4 @@
 - name: configure static route for upf traffic on ueransim node
   shell: |
     ip route add {{ core.upf.ip_prefix }} via {{ core.amf.ip }}
+  when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
