debugging dep install
Signed-off-by: Larry Peterson <llp@cs.princeton.edu>

--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -19,14 +19,8 @@
 
 - name: Install dependencies
   apt:
-    name: "{{ item }}"
+    name: g++ libsctp-dev iproute2 make
     state: present
-  loop:
-    - g++
-    - pkg-config
-    - libsctp-dev
-    - iproute2
-    - make
   tags:
     - install
 
