--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -3,19 +3,19 @@
   file:
     path: ueransim_onramp
     state: absent
-  tags:
-    - install
-  register: remove
-
-- debug:
-    var: remove
+  when: inventory_hostname in groups['ueransim_nodes']
 
 - name: Clone UERANSIM repository
   git:
     repo: https://github.com/aligungr/UERANSIM.git
     dest: ueransim_onramp
-  tags:
-    - install
+  when: inventory_hostname in groups['ueransim_nodes']
+
+- name: update apt cache
+  apt:
+    update_cache: true
+  when: inventory_hostname in groups['ueransim_nodes']
+  become: true
 
 - name: Install dependencies
   apt:
@@ -27,8 +27,9 @@
     - libsctp-dev
     - iproute2
     - make
-  tags:
-    - install
+    # - iperf3
+  when: inventory_hostname in groups['ueransim_nodes']
+  become: true
 
 # TODO: Fix cmake version: CMake 3.17 or higher is required
 - name: Install cmake
@@ -36,17 +37,41 @@
     name: cmake
     state: present
     classic: true
-  tags:
-    - install
+  when: inventory_hostname in groups['ueransim_nodes']
+  become: true
 
 - name: Build UERANSIM
   shell: cmake . && make
   args:
     chdir: ueransim_onramp
-  tags:
-    - install
+  when: inventory_hostname in groups['ueransim_nodes']
+
+- name: Changing perm of "nr-binder", adding "+x"
+  file: 
+    path: ueransim_onramp/build/nr-binder
+    mode: u+x
+  when: inventory_hostname in groups['ueransim_nodes']
 
 - name: configure static route for upf traffic on ueransim node
   shell: |
     ip route add {{ core.upf.ip_prefix }} via {{ core.amf.ip }}
+  become: true
   when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
+
+### TODO: IPERF 
+
+# - name: copy iperf server deployment files to aether host
+#   template:
+#     src: "{{ ROOT_DIR }}/deps/ueransim/roles/simulator/template/iperf-server.yaml"
+#     dest: /tmp/iperf-server.yaml
+#   become: true
+#   when: inventory_hostname in groups['master_nodes']
+
+# - name: Create iperf-server pod in omec namespace
+#   kubernetes.core.k8s:
+#     kubeconfig: "{{ ansible_user_dir }}/.kube/config"
+#     state: present
+#     src: "/tmp/iperf-server.yaml"
+#     apply: true
+#   register: pod_resul
+#   when: inventory_hostname in groups['master_nodes']
