--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -54,7 +54,7 @@
 
 - name: configure static route for upf traffic on ueransim node
   shell: |
-    ip route add {{ core.upf.ip_prefix }} via {{ core.amf.ip }}
+    ip route add {{ core.upf.access_subnet }} via {{ core.amf.ip }}
   become: true
   when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
 
@@ -62,12 +62,12 @@
 
 # - name: copy iperf server deployment files to aether host
 #   template:
-#     src: "{{ ROOT_DIR }}/deps/ueransim/roles/simulator/template/iperf-server.yaml"
+#     src: "{{ ROOT_DIR }}/deps/ueransim/roles/simulator/templates/iperf-server.yaml"
 #     dest: /tmp/iperf-server.yaml
 #   become: true
 #   when: inventory_hostname in groups['master_nodes']
 
-# - name: Create iperf-server pod in omec namespace
+# - name: Create iperf-server pod in aether-5gc namespace
 #   kubernetes.core.k8s:
 #     kubeconfig: "{{ ansible_user_dir }}/.kube/config"
 #     state: present
