--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -52,9 +52,13 @@
     mode: u+x
   when: inventory_hostname in groups['ueransim_nodes']
 
+- set_fact:
+    subnet: "{{ core.upf.access_subnet | regex_replace('[0-9]/24', '0/24') }}"
+  when: inventory_hostname in groups['master_nodes']
+
 - name: configure static route for upf traffic on ueransim node
   shell: |
-    ip route add {{ core.upf.access_subnet }} via {{ core.amf.ip }}
+    ip route add {{ subnet }} via {{ core.amf.ip }}
   become: true
   when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
 
