--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -54,7 +54,7 @@
 
 - set_fact:
     subnet: "{{ core.upf.access_subnet | regex_replace('[0-9]/24', '0/24') }}"
-  when: inventory_hostname in groups['master_nodes']
+  when: inventory_hostname in groups['ueransim_nodes']
 
 - name: configure static route for upf traffic on ueransim node
   shell: |
