--- a/roles/simulator/tasks/uninstall.yml
+++ b/roles/simulator/tasks/uninstall.yml
@@ -19,9 +19,13 @@
   become: true  
   when: inventory_hostname in groups['ueransim_nodes']
   
-- name: configure static route for upf traffic on ueransim node
+- set_fact:
+    subnet: "{{ core.upf.access_subnet | regex_replace('[0-9]+/24', '0/24') }}"
+  when: inventory_hostname in groups['ueransim_nodes']
+
+- name: remove static route for upf traffic on ueransim node
   shell: |
-    ip route del {{ core.upf.access_subnet }} via {{ core.amf.ip }}
+    ip route del {{ subnet }} via {{ core.amf.ip }}
   when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
   become: true
   ignore_errors: yes
