--- a/config/custom-gnb.yaml
+++ b/config/custom-gnb.yaml
@@ -5,9 +5,9 @@ nci: '0x000000010'  # NR Cell Identity (36-bit)
 idLength: 32        # NR gNB ID length in bits [22...32]
 tac: 1              # Tracking Area Code
 
-linkIp: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}   # gNB's local IP address for Radio Link Simulation (Usually same with local IP)
-ngapIp: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}   # gNB's local IP address for N2 Interface (Usually same with local IP)
-gtpIp: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}    # gNB's local IP address for N3 Interface (Usually same with local IP)
+linkIp: {{ ueransim.gnb.ip }}   # gNB's local IP address for Radio Link Simulation (Usually same with local IP)
+ngapIp: {{ ueransim.gnb.ip }}   # gNB's local IP address for N2 Interface (Usually same with local IP)
+gtpIp: {{ ueransim.gnb.ip }}    # gNB's local IP address for N3 Interface (Usually same with local IP)
 
 # List of AMF address information
 amfConfigs:
