--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,25 +5,9 @@ core:
     ip: "172.31.3.101"
 
 ueransim:
+  gnb:
+    ip: "172.20.0.2"
   servers:
-    "0":
+    0:
       gnb: "config/custom-gnb.yaml"
       ue: "config/custom-ue.yaml"
-  
-  # TODO: Dockerize UERANSIM  
-  # docker:
-  #   container:
-  #     image: kunal14kapoor/ueransim:latest
-  #     prefix: ueransim
-  #     count: 1
-  #   network:
-  #     macvlan:
-  #       name: ueransimnet
-
-      #servers: Enable this for different needed configurations.Please ensure the file existence.
-      #0:
-      #- "deps/ueransim/config/ueransim-s1-p1.yaml"
-      #- "deps/ueransim/config/ueransim-s1-p2.yaml"
-      #1:
-      #- "deps/ueransim/config/ueransim-s1-p2.yaml"
-      #- "deps/ueransim/config/ueransim-s1-p1.yaml"
