Add multihop support to deploy GNB's from multiple hops
Signed-off-by: Marikkannu, Suresh <suresh.marikkannu@intel.com>

--- a/roles/simulator/defaults/main.yml
+++ b/roles/simulator/defaults/main.yml
@@ -12,5 +12,7 @@ ueransim:
       gnb: "config/custom-gnb.yaml"
       ue: "config/custom-ue.yaml"
 core:
+  upf:
+    multihop_gnb: false
   amf:
     ip: "172.16.248.6"
