--- a/roles/simulator/tasks/install.yml
+++ b/roles/simulator/tasks/install.yml
@@ -60,7 +60,7 @@
   shell: |
     ip route add {{ subnet }} via {{ core.amf.ip }}
   become: true
-  when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes']) and core.upf.multihop_gnb == false
 
 ### TODO: IPERF 
 
