--- a/roles/simulator/tasks/uninstall.yml
+++ b/roles/simulator/tasks/uninstall.yml
@@ -26,6 +26,6 @@
 - name: remove static route for upf traffic on ueransim node
   shell: |
     ip route del {{ subnet }} via {{ core.amf.ip }}
-  when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes'])
+  when: (inventory_hostname in groups['ueransim_nodes']) and (inventory_hostname not in groups['master_nodes']) and core.upf.multihop_gnb == false
   become: true
   ignore_errors: yes
