Improve UERANSIM blueprint by adding a stop task and update the start task
Signed-off-by: Arrobo, Gabriel <gabriel.arrobo@intel.com>

--- a/roles/simulator/tasks/main.yml
+++ b/roles/simulator/tasks/main.yml
@@ -8,6 +8,10 @@
   import_tasks: roles/simulator/tasks/start.yml
   tags: start
 
+- name: stop ueransim/simulator
+  import_tasks: roles/simulator/tasks/stop.yml
+  tags: stop
+
 - name: uninstall ueransim/simulator
   import_tasks: roles/simulator/tasks/uninstall.yml
   tags: uninstall
